# dao_oriented_protocol

./: Cargo.toml  README.md
backend/: .gitignore  package.json  swanky.config.json
backend/artifacts/: dao_core.contract  proposal_manager.contract  proposal_manager.json
backend/contracts/: all_build.bash
backend/contracts/application_core/: Cargo.toml
backend/contracts/application_core/src/: lib.rs
backend/contracts/communication_base/: Cargo.toml  lib.rs
backend/contracts/dao_core/: Cargo.toml
backend/contracts/dao_core/src/: lib.rs
backend/contracts/default_contract/: lib.rs
backend/contracts/default_election/: Cargo.toml
backend/contracts/default_election/src/: lib.rs
backend/contracts/default_member/: Cargo.toml
backend/contracts/default_member/src/: lib.rs
backend/contracts/default_proposal/: Cargo.toml
backend/contracts/default_proposal/src/: lib.rs
backend/contracts/default_proposal_manager/: Cargo.toml
backend/contracts/default_proposal_manager/src/: lib.rs
backend/contracts/proposal_manager/: Cargo.toml
backend/contracts/proposal_manager/src/: lib.rs
backend/logics/: Cargo.toml  lib.rs
backend/logics/common/: common_logics.rs  mod.rs
backend/logics/traits/: mod.rs
backend/logics/traits/contract_base/: contract_base.rs  mod.rs
backend/logics/traits/errors/: contract_base.rs  contract_error.rs
backend/logics/traits/types/: types.rs
backend/test/dao_core/: flipper.test.ts
backend/test/dao_core/artifacts/: dao_core.json
backend/test/default_election/: flipper.test.ts
backend/test/default_member/: flipper.test.ts
backend/test/default_proposal/: flipper.test.ts
backend/test/default_proposal_manager/: flipper.test.ts
backend/test/proposal_manager/: flipper.test.ts
backend/test/proposal_manager/artifacts/: proposal_manager.contract  proposal_manager.json
backend/test/proposal_manager/typedContract/build-extrinsic/: proposal_manager.ts
backend/test/proposal_manager/typedContract/constructors/: proposal_manager.ts
backend/test/proposal_manager/typedContract/contracts/: proposal_manager.ts
backend/test/proposal_manager/typedContract/data/: proposal_manager.json
backend/test/proposal_manager/typedContract/event-types/: proposal_manager.ts
backend/test/proposal_manager/typedContract/events/: proposal_manager.ts
backend/test/proposal_manager/typedContract/mixed-methods/: proposal_manager.ts
backend/test/proposal_manager/typedContract/query/: proposal_manager.ts
backend/test/proposal_manager/typedContract/tx-sign-and-send/: proposal_manager.ts
backend/test/proposal_manager/typedContract/types-returns/: proposal_manager.ts
example/color_the_internet/: README.md
example/color_the_internet/color_the_internet/: Cargo.toml  lib.rs
example/color_the_internet/governance_token/: Cargo.toml  lib.rs
example/color_the_internet/test/: .gitignore  deploy.ts  move_contract.bash  package-lock.json  package.json  test.ts  test2.ts  tsconfig.json
example/color_the_internet/test/contract_files/: application_core.contract.json  color_the_internet.contract.json  default_election.contract.json  default_member.contract.json  default_proposal.contract.json  governance_token.contract.json
example/community_protocol/: README.md
example/community_protocol/cli/deploy_community/: config.toml  deploy.ts
example/community_protocol/cli/deploy_community/contract_json/: community_sub_token.json  community_token.json  defaultElectionContract.json  (+1 more)
example/community_protocol/cli/deploy_community_list_manager/: config.toml  deploy_list_manager.ts  package.json
example/community_protocol/contracts/community_core/: Cargo.toml  lib.rs
example/community_protocol/contracts/community_list_manager/: Cargo.toml  lib.rs
example/community_protocol/contracts/community_sub_token/: Cargo.toml  lib.rs
example/community_protocol/contracts/community_token/: Cargo.toml  lib.rs
example/community_protocol/contracts/test/: community_add_test.ts  move_json_files.bash  package-lock.json  package.json  test.ts
example/community_protocol/contracts/types/: Cargo.toml  types.rs
example/community_protocol/contracts/update_application_core/: Cargo.toml
example/community_protocol/contracts/update_member_manager/: Cargo.toml  lib.rs
example/community_protocol/frontend/: .env  prettier.config.js  tailwind.config.js
example/community_protocol/frontend/api/: community.ts  election.ts  member.ts  proposal.ts  software.ts
example/community_protocol/frontend/components/: BalanceParts.tsx  CommunityParts.tsx  CommunitySearchResult.tsx  ContibutionList.tsx  ContributionParts.tsx  ProposalList.tsx  SubmitContribution.tsx
example/community_protocol/frontend/contract_abi/: application_core.json  community_core.json  community_list_manager.json  community_sub_token.json  community_token.json
example/community_protocol/frontend/pages/: index.tsx
example/community_protocol/frontend/types/: CommunityType.ts  ContributionType.ts
example/flipper_oriented_dao/contracts/dao_oriented_flipper/: Cargo.toml  lib.rs
example/flipper_oriented_dao/contracts/test/: copy_contract_file.bash  package.json  test.ts
example/flipper_oriented_dao/frontend/: package.json
example/flipper_oriented_dao/frontend/api/: election.ts  getFlip.ts  member.ts  proposal.ts  software.ts
example/flipper_oriented_dao/solidity_contracts/: solidity_flipper.sol
protocol/: all_build.bash
protocol/application_core/: Cargo.toml
protocol/application_core/src/: lib.rs
protocol/logics/: Cargo.toml  lib.rs
protocol/logics/common/: common_logics.rs
protocol/logics/traits/contract_base/: contract_base.rs
protocol/logics/traits/errors/: contract_error.rs
protocol/logics/traits/types/: types.rs
protocol/pre_install/default_contract/: Cargo.toml  lib.rs
protocol/pre_install/default_election/: Cargo.toml
protocol/pre_install/default_election/src/: lib.rs
protocol/pre_install/default_member/: Cargo.toml
protocol/pre_install/default_member/src/: lib.rs
protocol/pre_install/default_proposal/: Cargo.toml
protocol/pre_install/default_proposal/src/: lib.rs
(+28 files in other folders)
