[workspace]
members = [
    "backend/contracts/application_core",
    "backend/contracts/default_contract",
    "backend/contracts/default_election",
    "backend/contracts/default_member",
    "backend/contracts/default_proposal",
    "backend/logics",
    "example/flipper_oriented_dao/contracts/dao_oriented_flipper",

]