[package]
name = "default_proposal_manager"
version = "0.1.0"
authors = ["shin.takahashi"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.4.0", default-features = false }
ink_metadata = { version = "3.4.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.4.0", default-features = false }
ink_storage = { version = "3.4.0", default-features = false }
ink_lang = { version = "3.4.0", default-features = false }
ink_prelude = { version = "3.4.0", default-features = false }
ink_engine = { version = "3.4.0", default-features = false, optional = true }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

# add own
openbrush = {tag = "v2.3.0",  git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["ownable"] }
contract_helper = { path = "../../logics", default-features = false }

[dev_dependencies]

[lib]
name = "default_proposal_manager"
path = "src/lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "contract_helper/std",
]
ink-as-dependency = []
