[package]
name = "color_the_internet"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
governance_token = { version="0.1.0", path="../governance_token", default-features = false, features = ["ink-as-dependency"]}
contract_helper = { path = "../../../protocol/logics", default-features = false }
default_contract = { version = "0.1.0", path = "../../../protocol/pre_install/default_contract", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "governance_token/std",
    "contract_helper/std",
]
ink-as-dependency = []
e2e-tests = []
