[package]
name = "community_core"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
contract_helper = { path = "../../../../protocol/logics", default-features = false }
default_contract = { version = "0.1.0", path = "../../../../protocol/pre_install/default_contract", default-features = false, features = ["ink-as-dependency"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
community_types = { path = "../types", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "contract_helper/std",
    "default_contract/std",
    "hex/std",
    "community_types/std",
]
ink-as-dependency = []
